# fcitx-vimmy

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  normal.cpp  normal.h  vimmy-addon.conf.in  vimmy.conf.in  vimmy.cpp  vimmy.h
